1，支持multi-release