@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>top.dreamlike</groupId>
+        <groupId>io.github.dreamlike-ocean</groupId>
         <artifactId>unsafe-java</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>unsafe-vthread</artifactId>
@@ -25,7 +25,7 @@
         </dependency>
 
         <dependency>
-            <groupId>top.dreamlike</groupId>
+            <groupId>io.github.dreamlike-ocean</groupId>
             <artifactId>unsafe-core</artifactId>
         </dependency>
 
@@ -44,7 +44,7 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+<!--                    <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
                 </configuration>
             </plugin>
         </plugins>
